tests/cases/semantic/invalid/const_reassignment/main.nm
@entry
fn main() {
    const value: int = 1
    value = 2
}
